# NoneBot-Rift

./: .env.prod  .gitignore  README.md  pyproject.toml
data/jrrp2/: jrrpdata.db
data/nonebot/config/nonebot_plugin_memes_api/: meme_manager.yml
data/nonebot/data/nonebot-plugin-orm/: db.sqlite3
data/nonebot/data/nonebot_plugin_steam_info/: bind_data.json  parent_data.json  steam_info.json
data/nonebot/data/nonebot_plugin_zxpix/: token.txt
data/nonebot/data/nonebot_plugin_zxreport/: data.json
my_plugins/weather/: __init__.py
